style.css
/* ... */
.socialButtons:hover {
  border: #192F01;
  background-color: #192F01;
}

.instructionsWrapper {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  padding-right: 15px;
  padding-left: 15px;
  padding-bottom: 5px;
  width: 100%;
}

.instructionTitle {
  font-size: 13px;
}

.settingsButton {
  text-align:right;
  align-self:flex-end;
  border: none;
  width:30px;
  height:30px;
}

.footer {
  position: absolute;
  bottom: 0;
  left: 0;
  width: 100%;
  text-align: center;
  margin-top: auto;
  background-color: #192F01;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  z-index: 1;
}

.aboutUs { 
  position: relative;
  border: none;
  padding:16px;
  margin-right:20px;
  font-family:'Futura';
  z-index: 1;
}

.aboutUsButtonBox {
  display: flex;
  flex-direction: row;
  width: 100%;
  justify-content: center;
}

.aboutUsVisible {
  color:#F8EFEA;
  position: absolute;
  animation: smooth-appear 2s ease forwards;
  text-align: center;
  z-index: 1;
  width:100%;
}

.aboutUsButton {
  color:#F8EFEA;
  background-color: #192F01;
  border: none;
  font-family:'Futura';
  z-index: 1;
  margin-left: 35px;
}

.aboutUsButton:hover {
  border:none;
  background-color: none;
}

.aboutUsExitButton {
  border: none; 
  position:absolute;
  right:0;  
  margin-right: 20px;
  visibility: hidden;
}
.aboutUsExitAnimation{
  animation: opacityReverse 2s linear reverse;
  animation-fill-mode: forwards;
  border: none;
  position:absolute;
  right:0;  
  margin-right: 20px;
}

.aboutUsExitVisible {
  border: none;
  position:absolute;
  right:0;  
  margin-right: 20px;
  visibility:visible;
  animation: opacity 2s linear reverse;
  color: #F8EFEA
}

.aboutUsExitVisible:hover {
  border: none;
  background-color: #192F01;
}

ul {
  list-style-type: none;
  padding-inline-start: 0;
  display: flex;
  flex-direction:column;
  row-gap: 20px;
  color: rgb(216, 216, 216);
}

.enterText {
  font-family: 'Futura';
  font-size:15px;
  width: 200px;
}

button {
  padding: 5px;
  border:1px solid;
  border-radius: 5px;
  background: none;
  font-family: 'Futura';
  font-size: 15px;
  cursor: pointer;
  color:#192F01;
}

button:hover {
  color:#F4DECB;
  border: 1px solid #192F01;
  background-color: #192F01;
}

button:disabled {
  cursor:default;
  color:rgba(16, 16, 16, 0.3);
}

button:disabled:hover {
  color:rgba(16, 16, 16, 0.3);
}

.backButtonAlign {
  display: flex;
  width:100%;
  justify-content: flex-start;
  margin-left: 20px;
  margin-bottom: 20px;
  margin-right: 20px;
}

.nextButtonAlign {
  display: flex;
  justify-content: flex-end;
  margin: 20px;
}

.backButtonBox {
  flex:1;
  text-align:left;
}

.backButton {
  text-align: left;
}

body {
    font-family: 'Futura';
    background-color: #F8EFEA;
    width:100%;
    height:100%;
    font-size: 16px;
    text-align: center;
    margin: 0px;
    min-height: 75vh;
    overflow: hidden;
    display: flex;
    flex-direction: column;
    color: #192F01;
  }

.opener {
  gap: 15px;
  visibility: visible;
  display: flex;
  flex-direction:column;
  align-items: center;
  justify-content: space-between;
}

.hideTheOpener {
  visibility: hidden;
  display: flex;
}

.wrapper{
  width: 100%;
  text-align: center;
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  overflow: scroll;
  max-height: 65vh;
  padding-bottom: 10px;
}

.recipeSelectionTitle {
  font-size: 20px;
  overflow:visible;
  text-wrap: wrap;
}

.cardImage {
  overflow: hidden;
  padding: 0px;
  /* max-height:fit-content */
  max-height: 100%;
  height: 100%;
}

.backToHome {
  border:#192F01;
}

.backToHome:hover {
  background-color: rgb(255, 240, 242);
  border: none;
}

.socialLinks {
  border: 1px solid #192F01;
}

.socialLinks:hover {
  background-color: #192F01;
}

.row {
  display: flex;
  flex-direction: row;
  background-color: #DED369;
  color: #192F01;
  border: solid #192F01 2px;
  border-radius: 20px;
  font-size: 100%;
  width: 42%;
  column-gap: 0px;
  margin-inline-start: 8px;
  margin-inline-end: 8px;
  margin-block-start: 8px;
  margin-inline-end:8px;
  overflow: hidden;
  /* height:100px; */
  /* height: fit-content; */
}

.row:hover {
  background-color: #f2edc3;
  cursor:pointer;
  animation: highlightCard ease 0.5s forwards;
}

.column {
  width: 40%;
  padding: 15px;
  display: flex;
  flex: 1 0 42%;
  flex-direction: column;
  justify-content: center;
  column-gap: 10px;
  margin: 10px;
}

.sayMore {
  visibility: hidden;
  position: absolute;
}

.sayMoreVisible {
  visibility: visible;
  width: 100%;
}

.imageColumn {
  background-color: #DED369;
  border-radius:20px;
  float: left;
  margin:2px;
  overflow: hidden;
  text-wrap: wrap;
  width: 32%;
  border: solid 2px #E0475B;
  scroll-snap-align: center;

}

.columnPreview {
  float: left;
  background-color: #DED369;
  border: solid 2px #E0475B;
  border-radius: 20px;
  display: flex;
  flex-direction: column;
  width: 32%;
  margin:2px;
  row-gap: 20px;
  overflow: -moz-scrollbars-vertical;
  overflow-y: scroll;
  text-wrap:wrap;
  scroll-snap-align: center;
}

.rowPreview {
  width: 100%;
  overflow: scroll !important;
  max-height: 65vh;
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: flex-start;
}

.rowPreview:after {
  content: "";
  display: table;
  clear: both;
}

.recipePreview {
  top: 15%;
  white-space: nowrap;
  display: block;
  visibility: hidden;
  width:100%;
  position: absolute;
  overflow: scroll;
}

.recipeSelectionScreen {
  white-space: nowrap;
  display: block;
  width: 100%;
  visibility: hidden;
  overflow: scroll;
  justify-content: space-around;
}

.alignPageInfo {
  display: flex;
  justify-content:space-evenly;
}

.recipeSelectionScreenVisible {
  visibility: visible;
}

.pageButtons {
  border-radius: 20 px;
  font-family: 'Futura';
}

h3 {
  color: #F8EFEA;
}

.pageButtons:hover {
  color: white;
}

.miseOrientationButtons {
  color: #F8EFEA;
}
/* ... */

